--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -11,11 +11,11 @@
     <title>Topic Manager</title>
 
     <!-- Office JavaScript API -->
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.d.ts"></script>
+    <script type="text/javascript" src="office.js"></script>
+    <!-- <script type="text/javascript" src="lib/office.d.ts"></script> -->
 
     <!-- For more information on Fluent UI, visit https://developer.microsoft.com/fluentui#/. -->
-    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"/>
+    <link rel="stylesheet" href="lib/fabric.min.css"/>
 
     <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
